--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,15 @@
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
     <build>
         <pluginManagement>
             <plugins>
@@ -55,5 +64,7 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+
     </build>
+
 </project>
