--- a/pom.xml
+++ b/pom.xml
@@ -55,5 +55,14 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
