--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <junit-version>4.13.2</junit-version>
+        <mockito-version>5.6.0</mockito-version>
     </properties>
 
     <dependencyManagement>
@@ -27,7 +29,13 @@
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.13.2</version>
+                <version>${junit-version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>${mockito-version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -64,6 +72,7 @@
                             </goals>
                         </execution>
                     </executions>
+
                 </plugin>
             </plugins>
         </pluginManagement>
