--- a/pom.xml
+++ b/pom.xml
@@ -13,22 +13,32 @@
         <module>lesson01</module>
         <module>lesson02</module>
         <module>lesson04</module>
+        <module>lesson06</module>
     </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <junit-version>4.13.2</junit-version>
+        <mockito-version>5.6.0</mockito-version>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit-version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>${mockito-version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <pluginManagement>
@@ -62,6 +72,7 @@
                             </goals>
                         </execution>
                     </executions>
+
                 </plugin>
             </plugins>
         </pluginManagement>
