--- a/lesson01/pom.xml
+++ b/lesson01/pom.xml
@@ -11,6 +11,14 @@
 
     <artifactId>lesson01</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
