HomeWork lesson14 fix

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,9 @@
         <maven.compiler.target>11</maven.compiler.target>
         <junit-version>4.13.2</junit-version>
         <jackson-version>2.15.3</jackson-version>
+        <springWeb-version>2.7.5</springWeb-version>
+        <frameworkWeb-version>5.3.14</frameworkWeb-version>
+        <mockito-version>4.11.0</mockito-version>
     </properties>
 
     <dependencyManagement>
@@ -46,6 +49,24 @@
                 <groupId>com.fasterxml.jackson.dataformat</groupId>
                 <artifactId>jackson-dataformat-xml</artifactId>
                 <version>${jackson-version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+                <version>${springWeb-version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-web</artifactId>
+                <version>${frameworkWeb-version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>${mockito-version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
