--- a/module09/pom.xml
+++ b/module09/pom.xml
@@ -8,7 +8,7 @@
     </parent>
 
     <artifactId>module09</artifactId>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <name>module09</name>
     <url>http://maven.apache.org</url>
@@ -19,9 +19,22 @@
 
     <dependencies>
         <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
