--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
         <maven.compiler.target>11</maven.compiler.target>
         <junit-version>4.13.2</junit-version>
         <jackson-version>2.15.3</jackson-version>
+        <jakarta.servlet-version>6.0.0</jakarta.servlet-version>
+        <lombok-version>1.18.30</lombok-version>
     </properties>
 
     <dependencyManagement>
@@ -49,6 +51,20 @@
                 <artifactId>jackson-dataformat-xml</artifactId>
                 <version>${jackson-version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>jakarta.servlet</groupId>
+                <artifactId>jakarta.servlet-api</artifactId>
+                <version>${jakarta.servlet-version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok-version}</version>
+            </dependency>
+
+
         </dependencies>
     </dependencyManagement>
 
