--- a/pom.xml
+++ b/pom.xml
@@ -27,18 +27,32 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <junit-version>4.13.2</junit-version>
+        <junit.version>4.13.2</junit.version>
         <jackson.version>2.15.3</jackson.version>
-        <spring.web.version>5.3.14</spring.web.version>
+        <spring.web.version>6.1.2</spring.web.version>
         <mockito.version>4.11.0</mockito.version>
     </properties>
 
-    <dependencyManagement>
+
+
+
+        <dependencyManagement>
+            <dependencies>
+                <dependency>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-dependencies</artifactId>
+                    <version>3.2.1</version>
+                    <scope>import</scope>
+                    <type>pom</type>
+                </dependency>
+            </dependencies>
+        </dependencyManagement>
+
         <dependencies>
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>${junit-version}</version>
+                <version>${junit.version}</version>
             </dependency>
 
             <dependency>
@@ -64,8 +78,21 @@
                 <artifactId>mockito-core</artifactId>
                 <version>${mockito.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter</artifactId>
+            </dependency>
+
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-test</artifactId>
+            </dependency>
         </dependencies>
-    </dependencyManagement>
 
     <build>
         <pluginManagement>
